# seqan_example

./: CMakeLists.txt
index/: CMakeLists.txt  fibre.cpp  index.cpp  vector.cpp
